--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,23 +10,23 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:windowSoftInputMode="adjustResize">
-        <activity android:name=".BienvenidaActivity">
+        <activity android:name=".Activity.BienvenidaActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Login" />
-        <activity android:name=".PostLogin" />
-        <activity android:name=".cambiarContrasenya" />
-        <activity android:name=".Transferencias" />
-        <activity android:name=".RegistroActividad" />
+        <activity android:name=".Activity.Login" />
+        <activity android:name=".Activity.PostLogin" />
+        <activity android:name=".Activity.cambiarContrasenya" />
+        <activity android:name=".Activity.Transferencias" />
+        <activity android:name=".Activity.RegistroActividad" />
         <activity
-            android:name=".PosicionGlobal"
+            android:name=".Activity.PosicionGlobal"
             android:label="@string/title_activity_posicion_global"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".TransferenciasActivity"></activity>
+        <activity android:name=".Activity.TransferenciasActivity"></activity>
     </application>
 
 </manifest>
