--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Nov 16 08:47:41 CET 2018
-sdk.dir=/home/mati/Android/Sdk
+#Sat Nov 17 13:49:46 CET 2018
+sdk.dir=C\:\\Users\\sportak\\AppData\\Local\\Android\\Sdk
