--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Nov 22 08:10:05 CET 2018
-sdk.dir=/home/mati/Android/Sdk
+#Thu Nov 22 18:31:53 CET 2018
+sdk.dir=C\:\\Users\\sportak\\AppData\\Local\\Android\\Sdk
