--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Nov 23 08:06:01 CET 2018
-sdk.dir=/home/mati/Android/Sdk
+#Thu Dec 06 17:39:24 CET 2018
+sdk.dir=C\:\\Users\\sportak\\AppData\\Local\\Android\\Sdk
