--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jan 24 09:37:59 CET 2019
-sdk.dir=/home/mati/Android/Sdk
+#Wed Jan 30 17:06:54 CET 2019
+sdk.dir=C\:\\Users\\sportak\\AppData\\Local\\Android\\Sdk
